# vk_api

./: .env-sample  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
db_queries/: db_queries.sql
src/common/: base_schemas.py
src/handlers/: posts.py  users.py
src/middlewares/: api_middleware.py
src/routes/: likes.py  posts.py  profile.py  users.py  utils.py
src/schemas/: likes.py  posts.py  profile.py  users.py
