[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Shved15 <maks.shihiwtsow15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["full"], version = "^0.101.1"}
requests = "^2.31.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
