[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Shved15 <maks.shihiwtsow15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["full"], version = "^0.101.1"}
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
